--- a/views/header.ejs
+++ b/views/header.ejs
@@ -47,7 +47,7 @@
                           /></svg></a>
                     
                     <!-- LINK TO BE ADDED (SEARCH) -->
-                      <a class="text-reset me-3" href="#"
+                      <a class="text-reset me-3" href="/search"
                       ><svg
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
@@ -127,7 +127,7 @@
                           d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"
                           /></svg></a>
   
-                      <a class="text-reset me-3" href="#"
+                      <a class="text-reset me-3" href="/search"
                       ><svg
                           xmlns="http://www.w3.org/2000/svg"
                           width="20"
@@ -197,7 +197,7 @@
                   d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"
                   /></svg></a>
   
-              <a class="text-reset me-3" href="#"
+              <a class="text-reset me-3" href="/search"
               ><svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="20"
